# mikke

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: aur-check.yml  ci.yml  release.yml
contrib/: mikke-watch.service
contrib/aur/: PKGBUILD
crates/mikke-cli/: Cargo.toml
crates/mikke-cli/src/: config.rs  main.rs  tui.rs  watch.rs
crates/mikke-core/: Cargo.toml
crates/mikke-core/benches/: index_and_search.rs
crates/mikke-core/examples/: eval.rs  profile.rs  tok_check.rs
crates/mikke-core/src/: chunk.rs  embed.rs  extract.rs  fuse.rs  index.rs  lib.rs  search.rs  state.rs  tok.rs  vector.rs
crates/mikke-core/tests/: curation.rs  end_to_end.rs  formats.rs  incremental.rs  multi_roots.rs
crates/mikke-core/tests/fixtures/: sample.docx  sample.html
docs/decisions/: 0001-extraction-pdf.md  0002-embeddings-tokenizer-fusion.md
eval/: queries.toml
eval/corpus/: assurance-habitation.txt  attestation-stage.txt  bail-location.md  billet-train.md  carnet-vaccination.md  contrat-travail.md  cours-thermodynamique.md  facture-veterinaire.md  flight-booking.txt  garantie-ordinateur.txt  impots-avis.md  insurance-policy.md  job-offer.txt  lease-agreement.md  medical-results.txt  meeting-notes.md  muffin-recipe.md  ordonnance-medicale.txt  physics-notes.md  plumber-invoice.txt  recette-tarte.md  releve-notes-lycee.md  resiliation-internet.txt  warranty-phone.md
spike/spike-pdf/: Cargo.toml
spike/spike-pdf/src/: main.rs
