[package]
name = "mikke-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mikke"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive"] }
crossterm = "0.29.0"
mikke-core = { version = "0.1.0", path = "../mikke-core" }
notify = "8.2.0"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.3"
ureq = "3.3.0"
