[package]
name = "mikke-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22.1"
blake3 = "1.8.5"
fst = "0.4.7"
hnsw_rs = "0.3.4"
html2text = "0.17.1"
memmap2 = "0.9.11"
pdf-extract = "0.12.0"
quick-xml = "0.41.0"
rayon = "1.12.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
safetensors = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
spm_precompiled = "0.1.4"
tantivy = "0.26.1"
thiserror = "2.0.18"
walkdir = "2.5.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
anyhow = "1.0.103"
criterion = "0.8.2"
tempfile = "3.27.0"
tokenizers = { version = "0.23.1", default-features = false, features = ["fancy-regex"] }
toml = "1.1.3"

[[bench]]
name = "index_and_search"
harness = false
